Fix issues arising from changing all words to lowercase